--- a/05-orchestration/rag-project/docker-compose.yml
+++ b/05-orchestration/rag-project/docker-compose.yml
@@ -45,7 +45,7 @@ services:
     restart: always
     networks:
       - app-network
-
+    mem_limit: 4GB
 networks:
   app-network:
     driver: bridge
